<resources>
    <string name="app_name">SimonGame</string>

    <string name="version">Versie</string>
    <string name="yes">Ja</string>
    <string name="no">Nee</string>
    <string name="help">Help</string>
    <string name="add_user">Voeg gebruiker toe</string>
    <string name="delete_user">Verwijder gebruiker</string>
    <string name="help_user_delete">Houd de gebruikersnaam ingedrukt om deze te verwijderen.</string>
    <string name="select_yes_to">Selecteer \'Ja\' om</string>
    <string name="username">Gebruikersnaam</string>
    <string name="cUser">Gebruiker</string>
    <string name="user">gebruiker</string>
    <string name="selected">geselecteerd</string>
    <string name="deleted">verwijderd</string>
    <string name="delete">Verwijder </string>
    <string name="to_delete"> te verwijderen</string>
    <string name="gender">Geslacht</string>
    <string name="score">Score:</string>
    <string name="highscores">Highscores</string>
    <string name="male">Man</string>
    <string name="female">Vrouw</string>
    <string name="other">Anders</string>
    <string name="error_fill_username">De gebruikersnaam is leeg.</string>
    <string name="error_fill_username_taken">De gebruikersnaam bestaat al.</string>
    <string name="action_start">Start</string>
    <string name="title_activity_instructions">Instructies</string>
    <string name="action_settings">Instellingen</string>
    <string name="about_us">Over ons</string>
    <string name="select_user">Kies gebruiker</string>
    <string name="classic">Klassieke mode</string>
    <string name="classic_instructions">In de Klassieke modus krijg je een reeks met kleuren te zien. Het doel is om de kleuren die op het scherm getoond worden in de juiste volgorde aan te klikken.</string>
    <string name="reverse">Twist mode</string>
    <string name="reverse_instructions">In de Twist modus krijg je een reeks met kleuren te zien. Het doel is om de kleuren die op het scherm getoond worden in de omgekeerde volgorde aan te klikken.
    Voorbeeld: bij Rood, Geel, Blauw, moet je klikken op Blauw, Geel, Rood</string>
    <string name="student_1">Ruben Meijers</string>
    <string name="student_2">Jens de Rond</string>
    <string name="student_1_intro">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur et tellus neque. Aliquam tempus arcu in eros semper, at efficitur metus pretium. Nullam condimentum molestie nunc ut rutrum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Quisque nisl nulla, suscipit id condimentum quis, tempor eget massaLorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur et tellus neque. Aliquam tempus arcu in eros semper, at efficitur metus pretium. Nullam condimentum molestie nunc ut rutrum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Quisque nisl nulla, suscipit id condimentum quis, tempor eget massa.</string>
    <string name="student_2_intro">Maecenas accumsan ultricies mauris, sit amet vehicula nunc ultricies quis. Fusce consectetur pulvinar nisi, a egestas sem ultrices vitae. Nulla facilisi. Duis tincidunt, purus ut ultrices faucibus, ex lacus vehicula nulla, at ultrices mi neque eget metus.</string>
</resources>
