<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center"
    android:background="@color/colorPrimary">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/classic"
        android:id="@+id/button_start"
        android:layout_gravity="center"
        android:background="@color/light_blue"
        android:textColor="@color/white"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reverse"
        android:id="@+id/button_startReverse"
        android:layout_gravity="center"
        android:background="@color/light_green"
        android:textColor="@color/white"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_instructions"
        android:id="@+id/button_instructions"
        android:layout_gravity="center"
        android:background="@color/light_red"
        android:textColor="@color/white"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_us"
        android:id="@+id/button_about_us"
        android:layout_gravity="center"
        android:background="@color/light_orange"
        android:textColor="@color/white"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/highscores"
        android:id="@+id/button_highscores"
        android:layout_gravity="center"
        android:background="@color/light_yellow"
        android:textColor="@color/white"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_user"
        android:id="@+id/button_select_user"
        android:layout_gravity="center"
        android:background="@color/dark_blue"
        android:textColor="@color/white"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2" />

</LinearLayout>